* _s master:   Fixes overflow issue when hidden content with the .screen-reader-text class is positioned hard right.   Documentation for content-search.php inclusion

--- a/root/_sass/common/_accessibility.scss
+++ b/root/_sass/common/_accessibility.scss
@@ -6,7 +6,9 @@
 .screen-reader-text {
 	clip: rect(1px, 1px, 1px, 1px);
 	position: absolute !important;
-	display: none;
+	height: 1px;
+	width: 1px; 
+	overflow: hidden;
 
 	&:hover, &:active, &:focus {
 		background-color: #f1f1f1;
